# agent-release-note-check

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: proof-packet.json  release-notes.md  sample.diff  weak-release-notes.md
src/agent_release_note_check/: __init__.py  cli.py
tests/: test_cli.py
